# gnr_projects

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  evaluate.cpp  model.cfg  pyproject.toml  train.cpp  vcpkg.json
framework/: conv2d.cpp  conv2d.h  dataloader.h  dataset.cpp  dataset.h  linear.cpp  linear.h  loss.cpp  loss.h  maxpool.cpp  maxpool.h  model.h  module.h  optimizer.cpp  optimizer.h  relu.cpp  relu.h  tensor.cpp  tensor.h  weight_io.cpp  weight_io.h
